@@ -53,6 +53,6 @@ public class OwnerController {
                 .getOrdersByOwner(ownerService.getById(id))
                 .stream()
                 .map(orderResponseMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
